--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
   <title>FicusJS components</title>
 </head>
 <body>
-<fjs-button></fjs-button>
+<fjs-button>Button</fjs-button>
 
 <script type="module">
   import { use } from 'https://unpkg.com/ficusjs?module'
   import { render as renderer, html } from 'https://unpkg.com/lit-html?module'
-  import { loadComponents } from './src/components/index.js'
+  import { loadComponents } from './components/index.js'
 
   // use loader to load many components
   loadComponents(['button'])
