feat: add separate html and custom elements

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <script type="module">
   import { use } from 'https://unpkg.com/ficusjs?module'
   import { render as renderer, html } from 'https://unpkg.com/lit-html?module'
-  import { loadComponents } from './components/index.js'
+  import { loadComponents } from './components/custom-elements/index.js'
 
   // use loader to load many components
   loadComponents(['button'])
