--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>FicusJS components</title>
+  <link rel="stylesheet" href="css/button.css">
+  <link rel="stylesheet" href="css/tabs.css">
 </head>
 <body>
-<fjs-button>Button</fjs-button>
+<fc-button>Button</fc-button>
+
+<hr>
+
+<fc-tabs>
+  <fc-tab-pane label="Tab 1">
+    <p>Tab pane 1</p>
+  </fc-tab-pane>
+  <fc-tab-pane label="Tab 2" disabled="true">
+    <p>Tab pane 2</p>
+  </fc-tab-pane>
+  <fc-tab-pane label="Tab 3">
+    <p>Tab pane 3</p>
+  </fc-tab-pane>
+</fc-tabs>
+
+<hr>
 
 <script type="module">
   import { use } from 'https://unpkg.com/ficusjs?module'
-  import { render as renderer, html } from 'https://unpkg.com/lit-html?module'
-  import { loadComponents } from './components/custom-elements/index.js'
+  import { html, renderer } from 'https://unpkg.com/ficusjs-renderers@latest/dist/lit-html.js'
+  import { loadComponents } from './components/loader'
 
   // use loader to load many components
-  loadComponents(['button'])
+  loadComponents(['button', 'tabs'])
     .then(modules => {
-      modules.forEach(m => use(m.module, renderer, html))
+      modules.forEach(m => use(m.module, { renderer, html }))
     })
+
+  // events
+  const tabs = document.querySelector('fc-tabs')
+  tabs.addEventListener('change', e => console.log(e))
 </script>
 </body>
 </html>
